commenting and cutomer service implementation